Added Support for Pie Chart
Dynamic Coloring :)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
@@ -31,31 +31,41 @@
         <activity
             android:name=".NewActivity"
             android:label="@string/title_activity_new" >
-            <meta-data 
+            <meta-data
                 android:name="android.support.PAREENT_ACTIVITY"
-                android:value="edu.foothill.tenthousandhours.ActivitiesList"/>
+                android:value="edu.foothill.tenthousandhours.ActivitiesList" />
         </activity>
         <activity
             android:name=".ActivityDetailsList"
             android:label="@string/title_activity_activity_details_list" >
-            <meta-data 
+            <meta-data
                 android:name="android.support.PAREENT_ACTIVITY"
-                android:value="edu.foothill.tenthousandhours.ActivitiesList"/>
+                android:value="edu.foothill.tenthousandhours.ActivitiesList" />
         </activity>
         <activity
             android:name=".NewActivityDetail"
             android:label="@string/title_activity_new_activity_detail" >
-            <meta-data 
+            <meta-data
                 android:name="android.support.PAREENT_ACTIVITY"
-                android:value="edu.foothill.tenthousandhours.ActivityDetailsList"/>
+                android:value="edu.foothill.tenthousandhours.ActivityDetailsList" />
         </activity>
         <activity
             android:name=".ReportsList"
             android:label="@string/title_activity_reports_list" >
+            <meta-data
+                android:name="android.support.PAREENT_ACTIVITY"
+                android:value="edu.foothill.tenthousandhours.ActivitiesList" />
+        </activity>
+        <activity
+            android:name=".GraphActivity"
+            android:label="@string/title_activity_graph" >
+            
             <meta-data 
                 android:name="android.support.PAREENT_ACTIVITY"
-                android:value="edu.foothill.tenthousandhours.ActivitiesList"/>
+                android:value="edu.foothill.tenthousandhours.ReportsList" />
         </activity>
+        
+        <activity android:name="org.achartengine.GraphicalActivity" />
     </application>
 
 </manifest>
