--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,10 +14,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:description="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+        	android:description="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
